--- a/index.html
+++ b/index.html
@@ -92,5 +92,13 @@
 <div>
   <p>&copy; Par ses amis. Tous droits réservés.</p>
 </div>
+  <!-- 🎴 Portail final + Pluie de pétales -->
+<div class="petal-container"></div>
+
+<section id="final-portal">
+  <div class="scan-text">SCAN TERMINÉ</div>
+  <button id="return-top">↺ Revenir à l’entrée</button>
+</section>
+
 </body>
 </html>
