--- a/index.html
+++ b/index.html
@@ -92,6 +92,8 @@
 <div>
   <p>&copy; Par ses amis. Tous droits réservés.</p>
 </div>
- 
+ <!-- 🌌 Pluie néon bleue -->
+<div class="petal-container"></div>
+
 </body>
 </html>
